--- a/index.html
+++ b/index.html
@@ -75,27 +75,36 @@
 <h2>O que você pode fazer com o Google Glasses</h2>
 <p>O vídeo de divulgação do Google mostra que você pode se transformar em uma espécie de “super-<wbr/>humano”, já que o aparelho pode indicar a quantos metros você está de seu destino, se o metrô está aberto ou fechado, mostrar o clima, agenda e até mesmo permitir que você marque encontros apenas com comandos de voz.</p>
 
-[AQUI ENTRA UM VÍDEO]
+	<div id="tv-radio">
+		<video id="filme-index" controls="controls">
+			<source src="_media/one-day.mp4" type="video/mp4"/> 
+			Desculpe, mas não foi possível carregar o vídeo.
+		</video>
+	</div>	
 </article>
 </section>
 
 <aside id="lateral">
 <h1>Outras Notícias</h1>
 <h2>Vídeo mais recente</h2>
-
-[AQUI ENTRA UM VÍDEO]
-
+	<div id="tv-radio">
+		<videos id="filme-index" controls="controls">
+			<source src="_media/how-it-feels.mp4" type="video/mp4"/>
+			Desculpe, mas não foi possível carregar o vídeo.
+		</video>
+	</div>
 <h2>Novidades no Glass</h2>
 <p>O Google enfim revelou as especificações completas do Google Glass, e com ele uma surpresa ainda inédita no mercado: a gigante das buscas usará um sistema de áudio baseado na transdução por condução. Através das hastes dos óculos, o som será transmitido para o ouvido do usuário por meio de micro&shy;vibrações em determinados ossos de sua cabeça, sem usar nenhum tipo de alto-falante.</p>
 
 <p>Além da surpresa do áudio, a tela montada a frente do olho do usuário também chamou atenção. Serão 640 x 360 pixels de resolução que, em proporção, equivaleria a um monitor de 25 polegadas de alta definição colocado a 2,5 metros de distância do espectador.</p>
 </aside>
 
-<footer id = "rodape">
-<p>Copyright &copy; 2013 - by Gustavo Guanabara <br/>
-<a href="http://facebook.com/cursoemvideo" target="_blank">Facebook</a> | 
-<a href="http://twitter.com/cursoemvideo" target="blank">Twitter</a></p>
-</footer>
+	<footer id = "rodape">
+		<p>Copyright &copy; 2013 - by Gustavo Guanabara <br/>
+			<a href="http://facebook.com/cursoemvideo" target="_blank">Facebook</a> | 
+			<a href="http://twitter.com/cursoemvideo" target="blank">Twitter</a>
+		</p>
+	</footer>
 </div>
 </body>
 </html>
